--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap");
 *, *::after, *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background: hsl(237deg, 49%, 15%);
+}
+
+#container {
+  height: 100vh;
+  background: radial-gradient(ellipse at top, hsl(214deg, 47%, 23%), hsl(237deg, 49%, 15%));
+}
+
+#score-container {
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
+#score-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: white;
+  padding: 12px 24px;
+  border-radius: 8px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 307px;
+  margin: 0 auto;
+  border: 4px solid hsl(217deg, 16%, 45%);
+  border-radius: 8px;
+  padding: 24px 12px;
 }
 
 /*# sourceMappingURL=main.css.map */
