--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -4,3 +4,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background: hsl(237, 49%, 15%);
+}
+
+#container
+{
+    height: 100vh;
+    background: radial-gradient(ellipse at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+}
