--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap');
+@import '../abstracts/colors';
 $barlow: 'Barlow Semi Condensed', sans-serif;
 
 #score-container
 {
     font-family: $barlow;
+
+    p
+    {
+        color: $score;
+        font-size: 14px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+    }
 }
