Styling phase 1 of the game. Responsive for mobile and desktop views.

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -14,7 +14,10 @@ body{
 
 #container
 {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
+    overflow: hidden;
     background: radial-gradient(ellipse at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
 
