--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,7 @@
 @import './base/typography';
 
 @import './components/score';
+@import './components/choice';
 
 @import './layout/header';
+@import './layout/game';
