--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,10 @@ body {
 }
 
 #container {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
+  overflow: hidden;
   background: radial-gradient(ellipse at top, hsl(214deg, 47%, 23%), hsl(237deg, 49%, 15%));
 }
 
@@ -49,6 +52,64 @@ body {
   border-radius: 8px;
 }
 
+.choice {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  height: 127px;
+  width: 129px;
+  border-radius: 50%;
+  z-index: 1;
+}
+.choice__bg {
+  height: 75%;
+  width: 75%;
+  border-radius: 50%;
+  position: absolute;
+  background: white;
+}
+.choice img {
+  z-index: 1;
+}
+
+#rock {
+  background: radial-gradient(ellipse at top, hsl(349deg, 70%, 56%), hsl(349deg, 71%, 52%));
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#paper {
+  background: radial-gradient(ellipse at top, hsl(230deg, 89%, 65%), hsl(230deg, 89%, 62%));
+  top: -70px;
+  left: -70px;
+}
+
+#scissors {
+  background: radial-gradient(ellipse at top, hsl(40deg, 84%, 53%), hsl(39deg, 89%, 49%));
+  top: -70px;
+  right: -70px;
+}
+
+@media only screen and (min-width: 1366px) {
+  .choice {
+    height: 203px;
+    width: 198px;
+  }
+  #rock {
+    bottom: -60px;
+    left: 50%;
+  }
+  #paper {
+    top: -100px;
+    left: -100px;
+  }
+  #scissors {
+    top: -100px;
+    right: -100px;
+  }
+}
 header {
   display: flex;
   align-items: center;
@@ -58,11 +119,33 @@ header {
   border: 4px solid hsl(217deg, 16%, 45%);
   border-radius: 8px;
   padding: 24px 12px;
+  margin-top: 45px;
 }
 
 @media only screen and (min-width: 1366px) {
   header {
     width: 696px;
+  }
+}
+#game {
+  position: relative;
+  flex: 1;
+}
+#game__phase__1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#game__phase__1 #triangle {
+  width: 180px;
+  height: auto;
+}
+
+@media only screen and (min-width: 1366px) {
+  #game #triangle {
+    width: 313px;
+    height: 278px;
   }
 }
 
