--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,3 +1,10 @@
 $header: hsl(217, 16%, 45%);
 $score: hsl(229, 64%, 46%);
 $dark: hsl(229, 25%, 31%);
+$rock: ('light' : hsl(349, 70%, 56%),
+        'dark' : hsl(349, 71%, 52%));
+$paper: ('light': hsl(230, 89%, 65%), 
+         'dark' : hsl(230, 89%, 62%));
+$scissors: ('light': hsl(40, 84%, 53%), 
+            'dark': hsl(39, 89%, 49%));
+
