--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,6 +9,7 @@ header
     border: 4px solid $header;
     border-radius: 8px;
     padding: 24px 12px;
+    margin-top: 45px;
 }
 
 @media only screen and (min-width: 1366px)
