--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,9 @@
 
 @import './components/score';
 @import './components/choice';
+@import './components/modalBtn';
+@import './components/overlay';
 
 @import './layout/header';
 @import './layout/game';
+@import './layout/modal';
