--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,19 @@ body {
   text-transform: uppercase;
 }
 
+#game__phase__2 #your-choice p {
+  text-transform: uppercase;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  color: white;
+  letter-spacing: 1px;
+}
+#game__phase__2 #house-choice p {
+  text-transform: uppercase;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  color: white;
+  letter-spacing: 1px;
+}
+
 #score-container {
   display: flex;
   flex-direction: column;
@@ -79,6 +92,10 @@ body {
   width: 129px;
   border-radius: 50%;
   z-index: 1;
+  cursor: pointer;
+}
+.choice * {
+  pointer-events: none;
 }
 .choice__bg {
   height: 75%;
@@ -195,14 +212,43 @@ header {
   flex: 1;
 }
 #game__phase__1 {
+  opacity: 1;
+  visibility: visible;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: opacity 50ms ease, visibility 50ms ease;
 }
 #game__phase__1 #triangle {
   width: 180px;
   height: auto;
+}
+#game__phase__1.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+#game__phase__2 {
+  display: flex;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  width: 307px;
+  justify-content: space-between;
+  align-items: center;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: opacity 60ms ease, visibility 60ms ease;
+}
+#game__phase__2 div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#game__phase__2.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 @media only screen and (min-width: 1366px) {
