--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -11,7 +11,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        transition: opacity 50ms ease, visibility 50ms ease;
+        transition: opacity 150ms ease, visibility 150ms ease;
 
         #triangle{
             width: 180px;
@@ -28,21 +28,22 @@
     &__phase__2
     {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         opacity: 0;
         visibility: hidden;
         position: absolute;
         width: 307px;
-        justify-content: space-between;
-        align-items: center;
         top: 100px;
         left: 50%;
         transform: translateX(-50%);
-        transition: opacity 60ms ease, visibility 60ms ease;
+        transition: opacity 150ms ease, visibility 150ms ease;
 
         div{
             display: flex;
             flex-direction: column;
             align-items: center;
+            gap: 16px;
         }
 
         &.show
