--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './components/choice';
 @import './components/modalBtn';
 @import './components/overlay';
+@import './components/placeholder';
 
 @import './layout/header';
 @import './layout/game';
