--- a/sass/components/_placeholder.scss
+++ b/sass/components/_placeholder.scss
@@ -1,20 +1,23 @@
 #house-choice-placeholder
 {
     background: hsl(237, 49%, 15%);
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 150ms ease, visibility 150ms ease;
     height: 110px;
     width: 110px;
     border-radius: 50%;
     display: none;
+    margin-bottom: 15px;
 }
 
 @media only screen and (min-width: 1366px)
 {
     #house-choice-placeholder
     {
+        display: none;
         height: 226px;
         width: 226px;
+        // position: relative;
+        // top: 30px;
+        // right: 15px;
+        margin-bottom: 0;
     }
 }
