--- a/css/main.css
+++ b/css/main.css
@@ -220,20 +220,26 @@ body {
     visibility: visible;
   }
 }
-#house-choice-placeholder {
+#house-choice-placeholder-container {
+  height: 127px;
+  width: 129px;
+}
+#house-choice-placeholder-container #house-choice-placeholder {
   background: hsl(237deg, 49%, 15%);
-  height: 110px;
-  width: 110px;
+  height: 95.25px;
+  width: 96.75px;
   border-radius: 50%;
-  display: none;
   margin-bottom: 15px;
 }
 
 @media only screen and (min-width: 1366px) {
-  #house-choice-placeholder {
-    display: none;
-    height: 226px;
-    width: 226px;
+  #house-choice-placeholder-container {
+    height: 286px;
+    width: 292px;
+  }
+  #house-choice-placeholder-container #house-choice-placeholder {
+    height: 214.5px;
+    width: 219px;
     margin-bottom: 0;
   }
 }
