--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import './components/modalBtn';
 @import './components/overlay';
 @import './components/placeholder';
+@import './components/button';
+@import './components/results';
 
 @import './layout/header';
 @import './layout/game';
