--- a/sass/layout/_game.scss
+++ b/sass/layout/_game.scss
@@ -37,7 +37,7 @@
         top: 100px;
         left: 50%;
         transform: translateX(-50%);
-        transition: opacity 150ms ease, visibility 150ms ease;
+        transition: opacity 150ms ease, visibility 150ms ease, width 150ms ease;
 
         div{
             display: flex;
