--- a/sass/components/_results.scss
+++ b/sass/components/_results.scss
@@ -8,4 +8,28 @@
 {
     display: flex !important;
     gap: 15px !important;
+    position: absolute;
+    bottom: -200px;
+    left: 50%;
+    transform: translateX(-50%);
+    flex-direction: column !important;
+}
+
+@media only screen and (max-width: 375px)
+{
+    #override
+    {
+        bottom: -125px;
+    }
+}
+
+@media only screen and (min-width: 1366px)
+{
+    #override
+    {
+        position: relative;
+        bottom: 0;
+        left: 0;
+        transform: none;
+    }
 }
